<resources>
    <string name="app_name">GroceryListManager</string>

    <!-- general -->
        <!-- buttons -->
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="delete_check">Delete Checked</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="add_selected">Add Selected</string>
    <string name="check_uncheck">Check All</string>
    <string name="select_unselect">Select All</string>

        <!-- input prompts -->
    <string name="enter_list_name">Enter List Name</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_type">Enter Item Type</string>
    <string name="number_zero">0</string>

        <!-- text placeholder -->
    <string name="item_name">insert_name</string>
    <string name="item_type">insert_type</string>

    <!-- homepage -->
    <string name="grocery_guru">Grocery Guru</string>string>
    <string name="my_lists">My Lists</string>string>
    <string name="create_new_list">Create List</string>string>
    <string name="search_item">Browse Item</string>string>
    <string name="search_type">Browse Type</string>string>

    <!-- Create List Page -->
    <string name="create_list">Create List</string>

    <!-- List Page -->
    <string name="list_name">insert_name</string>

    <!-- Search Item Page -->
    <string name="search_by_name">Search By Name</string>
    <string name="search">Search</string>
    <string name="add_entry">Add New Database Entry</string>

    <!-- Add new entry Page -->
    <string name="new_entry">New Entry</string>
    <string name="is_new_type">Other:</string>

    <!-- Search Type Page -->
    <string name="search_by_type">Search By Type</string>
    <string name="dairy">Dairy</string>
    <string name="produce">Produce</string>
    <string name="meat">Meat</string>
    <string name="seafood">Seafood</string>
    <string name="frozen">Frozen</string>
    <string name="deli">Deli</string>
    <string name="cereal">Cereal</string>
    <string name="international">International</string>
    <string name="bakery">Bakery</string>

    <!-- List Entry(Grocery Item) Page -->
    <string name="quantity">Quantity: </string>

    <string name="type_intro">"This item is a "</string>
    <string name="type_product">" product."</string>

    <!-- Manage Database Page -->
    <string name="database">Database</string>

    <!-- Manual Page -->
    <string name="manual_title">App Manual</string>
    <string name="manual_body">text</string>

</resources>